--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: page    
 header-img: "img/red.jpg"  
-description: "你来到了一片荒芜之地"
+description: "方圆千里，尽为荒芜！"
 permalink: 404.html  
 ---
 
